fix: stream analyze, reset id's on suspense recreate

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rollup -c",
+    "build:watch": "rollup -c -w",
     "release": "npm run build && cd lib && npm publish",
     "lint:check": "eslint --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
     "lint:format": "eslint --fix --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
