feat: migrate to es module, fix complete suspense
BREAKING CHANGE: migrate to es module

--- a/.npmignore
+++ b/.npmignore
@@ -9,7 +9,7 @@ coverage
 .gitattributes
 .editorconfig
 .eslintignore
-.eslintrc.js
+.eslintrc.cjs
 .lintstagedrc.js
 commitlint.config.js
 rollup.config.js
