--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,13 @@
       "es2015",
       "es2017",
       "es2019",
+      "es2021",
       "dom",
       "webworker"
     ],
-    "module": "CommonJS",
+    "module": "ES2022",
     "moduleResolution": "Node",
+    "target": "ESNext",
     "noImplicitAny": true,
     "noImplicitReturns": true,
     "declaration": true,
@@ -31,21 +33,12 @@
     "pretty": true,
     "suppressImplicitAnyIndexErrors": true,
     "useDefineForClassFields": true,
-    "target": "es2019",
     "baseUrl": "./src",
     "paths": {},
     "jsx": "react"
   },
   "exclude": [
     "node_modules",
-    "build",
-    "scripts",
-    "acceptance-tests",
-    "webpack",
-    "jest",
-    "public/lib",
-    "node_modules",
-    "build",
     "lib",
     "commitlint.config.js",
     "nyc.config.js",
