--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
   "name": "@lomray/consistent-suspense",
   "version": "1.0.0",
+  "type": "module",
   "description": "React library for generate stable ID inside suspense.",
-  "main": "index.js",
-  "types": "index.d.ts",
   "keywords": [
     "js",
     "suspense",
     "id",
     "react",
-    "ssr"
+    "ssr",
+    "stable",
+    "generate"
   ],
   "publishConfig": {
     "access": "public"
@@ -33,44 +34,34 @@
     "ts:check": "tsc --project ./tsconfig.json --skipLibCheck --noemit",
     "prepare": "husky install"
   },
-  "dependencies": {
-    "@babel/runtime": "^7.19.0"
-  },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/plugin-transform-runtime": "^7.19.1",
-    "@babel/preset-env": "^7.19.4",
-    "@babel/preset-react": "^7.18.6",
-    "@commitlint/cli": "^17.6.6",
-    "@commitlint/config-conventional": "^17.6.6",
-    "@lomray/eslint-config": "^3.0.0",
-    "@lomray/prettier-config": "^1.2.0",
-    "@rollup/plugin-json": "^6.0.0",
-    "@rollup/plugin-terser": "^0.4.3",
-    "@types/react": "^18.2.7",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
+    "@commitlint/cli": "^18.4.4",
+    "@commitlint/config-conventional": "^18.4.4",
+    "@lomray/eslint-config": "^4.0.1",
+    "@lomray/prettier-config": "^2.0.1",
+    "@rollup/plugin-json": "^6.1.0",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@types/react": "^18.2.47",
+    "@typescript-eslint/eslint-plugin": "^6.18.1",
     "@zerollup/ts-transform-paths": "^1.7.18",
-    "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsx-a11y": "^6.7.1",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-prettier": "^5.1.2",
     "husky": "^8.0.3",
-    "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8",
+    "lint-staged": "^15.2.0",
+    "prettier": "^3.1.1",
     "react": "^18.2.0",
-    "rollup": "2.79.1",
-    "rollup-plugin-copy": "^3.4.0",
+    "rollup": "^4.9.4",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-folder-input": "^1.0.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
-    "rollup-plugin-ts": "^3.2.0",
-    "semantic-release": "^21.0.7",
-    "ttypescript": "^1.5.15",
-    "typescript": "^4.7.4"
+    "rollup-plugin-ts": "^3.4.5",
+    "semantic-release": "^21.1.2",
+    "typescript": "^4.9.5"
   },
   "peerDependencies": {
-    "react": ">=17.0.2",
-    "tslib": "^2.5.2"
+    "react": ">=17.0.2"
   }
 }
