--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,16 +1,20 @@
 name: Release
+
 on:
   push:
-    branches:
-      - prod
+    branches: [ prod, staging ]
+
 jobs:
   release:
     name: Release
     runs-on: ubuntu-latest
+    concurrency:
+      group: ${{ github.ref }}-release
+      cancel-in-progress: true
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - run: echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" > ~/.npmrc
 
@@ -23,6 +27,14 @@ jobs:
       - name: Run eslint
         run: npm run lint:check
 
+      - name: Test
+        run: npm run test -- --coverage
+
+      - uses: actions/upload-artifact@v4
+        with:
+          name: coverage-lcov
+          path: coverage
+
       - name: Build
         run: |
           npm pkg delete scripts.prepare
@@ -33,3 +45,25 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
         run: npx semantic-release
+
+  sonarcube:
+    runs-on: ubuntu-latest
+    needs: release
+    concurrency:
+      group: ${{ github.ref }}-sonarcube
+      cancel-in-progress: true
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/download-artifact@v4
+        with:
+          name: coverage-lcov
+          path: coverage
+
+      - uses: SonarSource/sonarcloud-github-action@master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          SONAR_TOKEN: ${{ secrets.SONAR_CLOUD_TOKEN }}
