--- a/package.json
+++ b/package.json
@@ -33,34 +33,38 @@
     "lint:check": "eslint --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
     "lint:format": "eslint --fix --ext \".ts,.tsx\" \"src/**/*.{ts,tsx,*.ts,*tsx}\"",
     "ts:check": "tsc --project ./tsconfig.json --skipLibCheck --noemit",
+    "test": "vitest run",
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.4",
-    "@commitlint/config-conventional": "^18.4.4",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@lomray/eslint-config": "^4.0.1",
     "@lomray/prettier-config": "^2.0.1",
-    "@rollup/plugin-json": "^6.1.0",
     "@rollup/plugin-terser": "^0.4.4",
-    "@types/react": "^18.2.47",
-    "@typescript-eslint/eslint-plugin": "^6.18.1",
-    "@zerollup/ts-transform-paths": "^1.7.18",
+    "@types/react": "^18.2.55",
+    "@types/sinon": "^17.0.3",
+    "@types/sinon-chai": "^3.2.12",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@vitest/coverage-v8": "^1.2.2",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
-    "eslint-plugin-prettier": "^5.1.2",
-    "husky": "^8.0.3",
-    "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1",
+    "eslint-plugin-prettier": "^5.1.3",
+    "husky": "^9.0.10",
+    "lint-staged": "^15.2.2",
+    "prettier": "^3.2.5",
     "react": "^18.2.0",
-    "rollup": "^4.9.4",
+    "rollup": "^4.10.0",
     "rollup-plugin-copy": "^3.5.0",
-    "rollup-plugin-folder-input": "^1.0.1",
     "rollup-plugin-peer-deps-external": "^2.2.4",
     "rollup-plugin-ts": "^3.4.5",
     "semantic-release": "^21.1.2",
-    "typescript": "^4.9.5"
+    "sinon": "^17.0.1",
+    "sinon-chai": "^3.7.0",
+    "typescript": "^5.3.3",
+    "vitest": "^1.2.2"
   },
   "peerDependencies": {
     "react": ">=17.0.2"
