--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,9 @@
 sonar.projectKey=consistent-suspense
 sonar.organization=lomray-software
 sonar.sources=src
+sonar.tests=__tests__
+sonar.coverage.exclusions=src/interfaces.ts
+sonar.javascript.lcov.reportPaths=coverage/lcov.info
 
 # =====================================================
 #   Meta-data for the project
